--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "ts-node-dev src/index.ts",
     "dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
