--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "event-management-platform",
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
-    "dev": "ts-node-dev src/index.ts"
+    "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
+    "build":"tsc"
+
   },
   "dependencies": {
     "express": "^4.17.1",
