--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.11",
     "@types/uuid": "^10.0.0",
     "ts-node": "^10.9.2",
