--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+    "builds": [
+      { "src": "src/index.ts", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/src/index.ts" }
+    ]
+  }
